--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-paystack": "^4.0.3",
     "react-router-dom": "^6.14.1",
-    "react-select": "^5.7.3",
+    "react-select": "^5.7.4",
+    "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
